fixed css for the searchbar icon not being align right

--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -36,7 +36,7 @@ header {
 }
 .search .fa-search {
     position: absolute;
-    top: 13px;
+    top: 8px;
     left: 37%;
     font-size: 13px;
 }
